[gd_scene load_steps=3 format=3 uid="uid://wafgerxla3u8"]

[ext_resource type="Script" path="res://addons/stageplay/line_editor.gd" id="1_ncj50"]
[ext_resource type="PackedScene" uid="uid://c5mlld4chwnjg" path="res://addons/stageplay/text_field.tscn" id="1_wv5bo"]

[node name="LineEditor" type="PanelContainer"]
script = ExtResource("1_ncj50")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SpeakerField" parent="VBoxContainer" instance=ExtResource("1_wv5bo")]
unique_name_in_owner = true
layout_mode = 2
label = "Speaker"
placeholder = "N/A"

[node name="Directives" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddDirectiveButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Directive"

[connection signal="pressed" from="VBoxContainer/AddDirectiveButton" to="." method="_on_add_directive_button_pressed"]
